adding Travis with linting and unit tests

--- a/generators/app/templates/test/index.html
+++ b/generators/app/templates/test/index.html
@@ -10,8 +10,8 @@
 	<body>
 		<script>
 			WCT.loadSuites([
-				'<%= name %>_test.html?wc-shadydom=true&wc-ce=true',
-				'<%= name %>_test.html?dom=shadow'
+				'<%= shortName %>.html?wc-shadydom=true&wc-ce=true',
+				'<%= shortName %>.html?dom=shadow'
 			]);
 		</script>
 	</body>
